# fluid-sim

./: .gitignore  CMakeLists.txt
cmake/sdl2_cmake/: FindSDL2.cmake
include/: color_ramp.h  constants.h  particle.h
src/: color_ramp.cpp  main.cpp  particle.cpp
